# events-aggregator

./: Dockerfile  alembic.ini  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: a240d519d9c2_initial_models.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: Dockerfile  __init__.py  events.py  health.py  sync.py  tickets.py
app/core/: config.py  scheduler.py
app/models/: __init__.py  event.py  event_status.py  place.py  registration.py  sync_metadata.py
app/repositories/: __init__.py  event_repository.py  place_repository.py  sync_metadata_repository.py  ticket_repository.py
app/schemas/: __init__.py  event.py  sync.py  ticket.py
app/services/: __init__.py  events_paginator.py  events_provider_client.py
app/usecases/: SyncEventsUsecase.py  __init__.py  create_ticket.py  get_seats.py
tests/: test_events_paginator.py  test_events_provider_client.py
